[package]
name = "streamfy-hub-protocol"
description = "Hub's Shared Resources"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cargo_toml = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true, features = ["serde"] }

streamfy-controlplane-metadata = { workspace = true, features = [ "smartmodule" ] }
streamfy-types = { workspace = true  }
