[package]
name = "streamfy-k8-client"
version = "15.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kubernetes API client for Streamfy"
publish = false
categories = ["api-bindings", "asynchronous", "encoding", "network-programming"]

[lib]
name = "k8_client"
path = "src/lib.rs"

[features]
default = ["openssl_tls"]
k8 = []
memory_client = ["async-channel", "async-lock", "serde_yaml"]
openssl_tls = ["streamfy-future/openssl_tls"]
native_tls = ["streamfy-future/native_tls"]
rust_tls = ["rustls", "streamfy-future/rust_tls"]

[dependencies]
anyhow = { workspace = true }
async-channel = { version = "2.3.1", optional = true }
async-lock = { version = "3.3.0", optional = true }
cfg-if = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true, features = ["io"] }
rand = "0.8.3"
rustls = { version = "0.23.11", optional = true }
hyper = { version = "0.14.28", features = ["client", "http1", "http2", "stream"] }
http = "0.2.9"
tokio = { workspace = true }
pin-utils = "0.1.0"
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = "0.15.0"
serde_yaml = { workspace = true, optional = true }
async-trait = { workspace = true }
streamfy-future = { path = "../streamfy-future", default-features = false, features = ["net", "task"] }
streamfy-k8-metadata-client = { path = "../streamfy-k8-metadata-client" }
streamfy-k8-diff = { path = "../streamfy-k8-diff" }
streamfy-k8-config = { path = "../streamfy-k8-config" }
streamfy-k8-types = { path = "../streamfy-k8-types", features = ["core", "batch"] }

[dev-dependencies]
rand = "0.8.3"
once_cell = "1.19.0"
async-trait = { workspace = true }
streamfy-future = { path = "../streamfy-future", default-features = false, features = ["fixture", "timer"] }
