[package]
name = "streamfy-k8-config"
version = "3.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Read Kubernetes config for Streamfy"
publish = false

[lib]
name = "k8_config"
path = "src/lib.rs"

[features]
context = ["tera"]

[dependencies]
tracing = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_yaml = { workspace = true, default-features = true }
serde_json = { workspace = true }
tera = { version = "1.19.1", optional = true }
hostfile = "0.3.0"
thiserror = { workspace = true }

[dev-dependencies]
streamfy-future = { path = "../streamfy-future", default-features = false, features = ["subscriber"] }
