[package]
name = "streamfy-kv-storage"
description = "Streamfy Key-Value Storage"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }



streamfy-protocol = { workspace = true }

[dev-dependencies]
streamfy-future = { workspace = true,features = ["fixture"] }
