[package]
name = "streamfy-run"
description = "Streamfy Engine Runner"
version = "0.0.0"
publish = false
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "streamfy_run"
path = "src/lib.rs"

[[bin]]
name = "streamfy-run"
path = "src/bin/main.rs"
doc = false

[features]
default = ["spu_smartengine"]
spu_smartengine = ["streamfy-spu/smartengine"]
rustls = ["streamfy-future/rust_tls"]

[dependencies]
clap = { workspace = true, features = ["std", "derive", "help", "usage", "error-context"]}
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# regardless of TLS, sc and spu always use openssl_tls for now because we need cert API
streamfy-future = { workspace = true, features = ["subscriber"] }
streamfy-extension-common = { workspace = true }
streamfy-sc = { workspace = true }
streamfy-spu = { workspace = true }
